# butter

./: .gitignore  Dockerfile  LICENSE.md  README.md  butter.code-workspace  flake.nix  main.py  process-compose.yml  pyproject.toml  renovate.json  run.sh
.dvc/: config
backend/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  model.dvc  only-rvc-requirements.txt  pyproject.toml  run.sh  rvc_main.py
backend/modules/: config.py  lib.py  llm.py  llm_function.py  memory.py  vtube.py
backend/prompts/: prompt
client/: .gitignore  astro.config.mjs  index.html  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
client/src/pages/: index.astro
client_misc/: main.py  pyproject.toml
frontend/: main.py  pyproject.toml
model/: .gitignore  README.md  client.py  data.dvc  main.py  model.keras.dvc  preprocess.py  pyproject.toml  record.py  train.py
modules/: llm_function.py  memory.py
prompts/: prompt
