[project]
name = "butter"
version = "0.1.0"
description = "An AI assistant"
authors = [
  {name = "MisileLaboratory", email = "misileminecord@gmail.com"},
  {name = "Landy"}
]
dependencies = [
  "tomli==2.0.1",
  "loguru==0.7.2",
  "orjson==3.10.7",
  "duckduckgo-search==6.2.7",
  "openai==1.40.8",
  "chromadb==0.5.5",
  "gradio==4.41.0",
  "selenium==4.23.1",
  "lxml==5.3.0",
  "beautifulsoup4==4.12.3",
  "langchain-openai==0.1.21",
  "pillow==10.4.0",
  "binaryornot==0.4.4",
  "mem0ai==0.0.20",
  "rvc-python==0.0.7",
  "google-cloud-texttospeech==2.16.5",
  "torch-directml==0.2.4.dev240815; sys_platform == \"win32\"",
  "pydub==0.25.1",
]
requires-python = "~=3.12.4"
readme = "README.md"
license = {text = "MisileLab License"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
  "python-lsp-server==1.11.0",
  "ruff-lsp==0.0.54",
]

[tool.pdm.resolution.overrides]
fairseq = "git+https://github.com/liyaodev/fairseq.git" # https://github.com/facebookresearch/fairseq/issues/5012
omegaconf = ">=2.3.0"
faiss-cpu = "==1.8.0.post1"
numpy = ">=1.26.0,<2"
