[project]
name = "backend"
version = "0.1.0"
description = "Backend of butter"
requires-python = "==3.13.1"
dependencies = [
  "beautifulsoup4==4.12.3",
  "duckduckgo-search==7.2.1",
  "elevenlabs==1.50.3",
  "fastapi[standard]==0.115.6",
  "langchain-openai==0.3.0",
  "loguru==0.7.3",
  "lxml==5.3.0",
  "mem0ai==0.1.41",
  "minio==7.2.14",
  "openai==1.59.6",
  "orjson==3.10.14",
  "python-multipart==0.0.20",
  "selenium==4.27.1",
  "tomli==2.2.1",
  "websockets==14.1"
]
