[project]
name = "client"
version = "0.1.0"
description = "Client of Butter"
authors = [
  {name = "misilelab", email = "misileminecord@gmail.com"}
]
dependencies = [
  "py-cord==2.6.0",
  "tomli==2.0.1",
  "httpx==0.27.0",
  "openai==1.42.0",
  "simpleaudio==1.0.4",
  "loguru==0.7.2",
  "pynacl==1.5.0"
]
requires-python = "~=3.12.4"
readme = "README.md"
license = {text = "MisileLab License"}

[tool.pdm]
distribution = false
