[project]
name = "client"
version = "0.1.0"
description = "Client of Butter"
authors = [
  {name = "misilelab", email = "misileminecord@gmail.com"}
]
dependencies = [
    "gradio>=4.42.0",
    "transformers>=4.44.2",
    "numpy<3",
    "torch>=2.4.0",
    "accelerate>=0.31.0",
    "torchaudio>=2.4.0",
    "pyannote-audio>=3.3.1",
    "tomli>=2.0.1",
    "onnxruntime>=1.19.0",
]
requires-python = "~=3.12.4"
readme = "README.md"
license = {text = "MisileLab License"}

[tool.pdm]
distribution = false

[tool.pdm.resolution.overrides]
numba = ">=0.59.0"
