[project]
name = "client"
version = "0.1.0"
description = "Client of Butter"
authors = [
  {name = "misilelab", email = "misileminecord@gmail.com"}
]
dependencies = [
  "tomli==2.0.1",
  "openai==1.42.0",
  "loguru==0.7.2",
  "numpy==2.1.0",
  "scipy==1.14.1",
  "sounddevice==0.5.0",
  "keyboard==0.13.5",
  "playsound@git+https://github.com/sjmikler/playsound3"
]
requires-python = "~=3.12.4"
readme = "README.md"
license = {text = "MisileLab License"}

[tool.pdm]
distribution = false
