[project]
name = "client_misc"
version = "0.1.0"
description = "The misc thing of butter"
authors = [
  {name = "misile", email = "misileminecord@gmail.com"},
]
dependencies = [
  "pyvts==0.3.2",
  "numpy==2.1.0",
  "loguru==0.7.2"
]
requires-python = "~=3.12.4"
readme = "README.md"
license = {text = "MisileLab License"}

[tool.pdm]
distribution = false
