[project]
name = "client_misc"
version = "0.1.0"
description = "The misc thing of butter"
authors = [
  {name = "misile", email = "misileminecord@gmail.com"},
]
dependencies = [
  "pyvts==0.3.3",
  "numpy==2.1.1",
  "loguru==0.7.2"
]
requires-python = "==3.12.5"
readme = "README.md"
license = {text = "MisileLab License"}

[tool.pdm]
distribution = false
