[project]
name = "butter_frontend"
version = "0.1.0"
description = "Frontend of butter"
authors = [
  {name = "misilelab", email = "misileminecord@gmail.com"},
]
dependencies = [
  "gradio==5.0.1",
  "loguru==0.7.2",
  "httpx==0.27.2",
]
requires-python = "==3.13.0"
readme = "README.md"
license = {text = "MisileLab License"}

[tool.pdm]
distribution = false
