[project]
name = "butter_frontend"
version = "0.1.0"
description = "Frontend of butter"
authors = [
  {name = "misilelab", email = "misileminecord@gmail.com"},
]
dependencies = [
  "gradio==5.4.0",
  "loguru==0.7.2",
  "httpx==0.27.2",
]
# https://github.com/jiaaro/pydub/issues/725
requires-python = "==3.12.6"
readme = "README.md"
license = {text = "MisileLab License"}

[tool.pdm]
distribution = false
