[project]
name = "butter"
version = "0.1.0"
description = "Butter"
authors = [
  {name = "MisileLab", email = "misile@duck.com"},
]
dependencies = [
  "scikit-learn==1.5.2",
  "pyvts==0.3.3",
  "pip==24.2",
  "numpy<2"
]
requires-python = "==3.12.6"
readme = "README.md"
license = {text = "MisileLab License"}

[tool.pdm]
distribution = false
