[project]
name = "butter"
version = "0.1.0"
description = "Butter"
authors = [
  {name = "MisileLab", email = "misile@duck.com"},
]
dependencies = [
  "pyvts==0.3.3",
  "httpx==0.27.2",
  "httpx-ws==0.6.1",
  "loguru==0.7.2",
  "numpy==2.1.2"
]
requires-python = "==3.12.7"
readme = "README.md"
license = {text = "MisileLab License"}

[tool.pdm]
distribution = false
